@@ -147,6 +147,110 @@ echo $memUsage . "%";
 ?>
                 </td>
               </tr>
+			  <?php
+                                exec("/usr/local/bin/mbmon -c1 -r 2>/dev/null ", $mbmonop, $error);
+                                if (!$error){
+                        ?>
+				<tr>
+				<td width="25%" class="vncellt">System Temperatures</td>
+				<td width="75%" class="listr">
+				<table width="100%" >
+                                           <?php
+                                                foreach ($mbmonop as $mbival) {
+                                                        if (preg_match('/^TEMP/',$mbival)) {
+																$mbmonp = explode(':',$mbival);
+																?>
+				<tr>
+				<td align="right" width="15%" class="listsensor">
+																<?php
+                                                                echo htmlspecialchars(str_replace('TEMP', 'Sensor ',$mbmonp[0]));
+																?>
+				</td>
+				<td align="left" width="85%" class="listsensorval">
+																<?php
+																echo htmlspecialchars($mbmonp[1]);
+                                                                echo '&deg;C</td></tr>';
+																
+                                                        }
+                                                }
+                                          ?>
+				</table></td>
+				</tr>
+				<tr>
+				<td width="25%" class="vncellt">System Fans</td>
+				<td width="75%" class="listr">
+				<table width="100%" >
+										<?php
+                                                foreach ($mbmonop as $mbival) {
+                                                        if (preg_match('/^FAN/',$mbival)) {
+																$mbmonp = explode(':',$mbival);
+																?>
+				<tr>
+				<td align="right" width="15%" class="listsensor">
+																<?php
+                                                                echo htmlspecialchars(str_replace('FAN', 'Fan ',$mbmonp[0]));
+																?>
+				</td>
+				<td align="left" width="85%" class="listsensorval">
+																<?php
+																echo htmlspecialchars($mbmonp[1]);
+                                                                echo ' rpm</td></tr>';
+                                                        }
+                                                }
+                                        ?>
+				</table></td>
+				</tr>
+				<tr>
+				<td width="25%" class="vncellt">System Voltages</td>
+				<td width="75%" class="listr">
+				<table width="100%" >
+										<?php
+                                                foreach ($mbmonop as $mbival) {
+                                                        if (preg_match('/^V\d+/',$mbival)) {
+																$oldvolts = array('V33', 'V50P','V12P', 'V12N', 'V50N');
+                                                                $nicevolts = array('+3.3v','+5v','+12v','-12v','-5v');
+																$mbmonp = explode(':',$mbival);
+																?>
+				<tr>
+				<td align="right" width="15%" class="listsensor">
+																<?php
+                                                                echo str_replace($oldvolts,$nicevolts,$mbmonp[0]);
+																?>
+				</td>
+				<td align="left" width="85%" class="listsensorval">
+																<?php
+																echo htmlspecialchars($mbmonp[1]);
+                                                                echo ' V</td></tr>';
+																
+                                                        }
+                                                }
+                                        ?>
+				</table></td>
+				</tr>
+				<tr>
+				<td width="25%" class="vncellt">Core Voltages</td>
+				<td width="75%" class="listr">
+				<table width="100%" >
+										<?php
+                                                foreach ($mbmonop as $mbival) {
+                                                        if (preg_match('/^VC/',$mbival)) {
+																$mbmonp = explode(':',$mbival);
+																?>
+				<tr>
+				<td align="right" width="15%" class="listsensor">
+																<?php
+                                                                echo htmlspecialchars(str_replace('VC', 'Core ',$mbmonp[0]));
+																?></td>
+				<td align="left" width="85%" class="listsensorval">
+																<?php
+																echo htmlspecialchars($mbmonp[1]);
+                                                                echo ' V</td></tr>';
+																
+                                                        }
+                                                }
+										echo '</table></td></tr>';
+                                }
+                        ?>
               <tr> 
                 <td width="25%" class="vncellt" valign="top">Notes</td>
                 <td width="75%" class="listr">
