@@ -3,6 +3,9 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 ---
+- add mbmon system fans/temp monitoring, requires /usr/local/bin/mbmon 
+  will work with a reasonable % of pc hardware, won't work on soekris/alix etc.
+---
 - add option to disable spoof check on Bridge, removal of filtered bridge
   causes non-m0n0wall dhcp servers to break, and some multicast traffic.
 ---
